syntax = "proto2";
package message;
option java_package = "com.lemeng.proto";
option java_outer_classname = "BaseCommand";

message PositionCommand {

    /*21*/
    required int32 id = 1;
    required float position_x = 2;
    required float position_y = 3;
    required float position_z  = 4;

}

message GameStartCommand {
    /*11*/
    repeated PositionCommand positionList = 1;

}
message GameEndCommand {
    /*12*/
   required int32 id = 1;

}
message BattleRequestCommand {
    /*10*/
    required int32 id = 1;
}
message UserInfoCommand {
    /*20*/
    required int32 id = 1;
}
message HeartBreakCommand{
    /*0*/
}
message LoginCommand{
    /*1*/
}

message LogoutCommand{
    /*2*/
    required int32 id = 1;

}